# rats-tls

./: .gitignore  CMakeLists.txt  MAINTAINERS  README.md
.github/actions/generate-random-port/: action.yml  generate_port.sh
.github/workflows/: manually_compilation_testing_image.yml  pr_basic_compilation_check.yml  tee_check.yml
.github/workflows/docker/: Dockerfile-compilation-testing-anolis8.4  Dockerfile-compilation-testing-anolis8.6  Dockerfile-compilation-testing-ubuntu20.04
asn1/: rats-tls.asn1
cmake/: CompilerOptions.cmake  FindSgxDcapQuoteVerify.cmake  LibCBOR.cmake  SGXCommon.cmake  SGXSSL.cmake
docs/: run_rats_tls_with_occlum.md
docs/design/: endorsements-extension-for-rats-tls.md
docs/how-to-with-csv/: build_and_run_rats_tls_with_csv-zh.md
fuzz/: CMakeLists.txt  README.md
fuzz/sgx-stub-enclave/: CMakeLists.txt  sgx_stub.edl  sgx_stub_ecall.c  sgx_stub_ecall.h  sgx_stub_enclave.lds
fuzz/tls_init/: CMakeLists.txt  fuzz_init.cc
fuzz/tls_negotiate/: CMakeLists.txt  fuzz_negotiate.cc
fuzz/tls_server/: CMakeLists.txt  fuzz_server.cc
fuzz/tls_sgx_mode/: CMakeLists.txt  fuzz_sgx_mode.cc
fuzz/tls_transmit/: CMakeLists.txt  fuzz_transmit.cc
samples/: CMakeLists.txt
samples/openssl-hook/: CMakeLists.txt  README.md  common.h  libopenssl-hook.c  openssl.c
samples/rats-tls-client/: CMakeLists.txt  client.c
samples/rats-tls-server/: CMakeLists.txt  server.c
samples/sgx-stub-enclave/: CMakeLists.txt  sgx_stub.edl  sgx_stub_ecall.c
src/: CMakeLists.txt
src/api/: rats_tls_cleanup.c  rats_tls_init.c  rats_tls_receive.c  rats_tls_setup_ssl.c  rats_tls_transmit.c
src/attesters/: CMakeLists.txt
src/attesters/api/: enclave_attester_register.c
src/attesters/csv/: CMakeLists.txt  cleanup.c  collect_evidence.c  csv_utils.c  csv_utils.h  init.c  main.c  pre_init.c
src/attesters/internal/: rtls_enclave_attester_load_all.c  rtls_enclave_attester_select.c
src/attesters/nullattester/: CMakeLists.txt  collect_endorsements.c  main.c
src/attesters/sev/: CMakeLists.txt  cleanup.c  collect_evidence.c  init.c  main.c  pre_init.c  sev.h
src/attesters/sev-snp/: CMakeLists.txt  cleanup.c  collect_evidence.c  init.c  main.c  pre_init.c  sev_snp.h
src/attesters/sev/ttrpc/: .gitignore  Cargo.toml  build.rs
src/attesters/sev/ttrpc/src/: lib.rs  sev_evidence.rs
src/attesters/sgx-ecdsa/: CMakeLists.txt  cleanup.c  collect_endorsements.c  collect_evidence.c  init.c  main.c  sgx_ecdsa.h
src/attesters/sgx-la/: cleanup.c  collect_evidence.c  init.c  main.c
src/attesters/tdx-ecdsa/: CMakeLists.txt  cleanup.c  collect_endorsements.c  collect_evidence.c  init.c  main.c  pre_init.c
src/common/: utils.c
src/core/: claim.c  cpu.c  dice.c  endorsement.c  main.c  rtls_common.c  rtls_core_generate_certificate.c
src/crypto_wrappers/internal/: rtls_crypto_wrapper_load_all.c  rtls_crypto_wrapper_load_single.c  rtls_crypto_wrapper_select.c
src/crypto_wrappers/nullcrypto/: CMakeLists.txt  gen_hash.c  gen_privkey.c  gen_sha256.c  main.c
src/crypto_wrappers/openssl/: CMakeLists.txt  gen_cert.c  gen_hash.c  gen_privkey.c  gen_pubkey_hash.c  gen_sha256.c  main.c
src/include/edl/: rtls_socket.h  rtls_syscalls.edl  sgx_ecdsa.edl
src/include/internal/: core.h  cpu.h  dice.h
src/include/rats-tls/: api.h  attester.h  cert.h  claim.h  crypto_wrapper.h  csv.h  endorsement.h  err.h  hash.h  oid.h  tls_wrapper.h  verifier.h
src/sgx/trust/: sgx_ecdsa_ecalls.c
src/sgx/untrust/: sgx_ecdsa_ocall.c  sgx_la_ocall.c
src/tls_wrappers/api/: tls_wrapper_verify_certificate_extension.c
src/tls_wrappers/internal/: rtls_tls_wrapper_select.c
src/tls_wrappers/nulltls/: CMakeLists.txt  main.c  negotiate.c  receive.c  transmit.c  use_cert.c  use_privkey.c
src/tls_wrappers/openssl/: CMakeLists.txt  init.c  main.c  negotiate.c  openssl.h  receive.c  setup_ssl.c  transmit.c  un_negotiate.c  use_cert.c  use_privkey.c  x509_openssl10x.c
src/verifiers/: CMakeLists.txt
src/verifiers/csv/: CMakeLists.txt  cleanup.c  csv_utils.c  csv_utils.h  hygoncert.c  hygoncert.h  init.c  main.c  pre_init.c  verify_evidence.c
src/verifiers/internal/: rtls_enclave_verifier_select.c
src/verifiers/nullverifier/: cleanup.c  main.c  verify_evidence.c
src/verifiers/sev/: CMakeLists.txt  amdcert.c  amdcert.h  cleanup.c  init.c  main.c  pre_init.c  sev_utils.c  sev_utils.h  sevcert.c  sevcert.h  verify_evidence.c
src/verifiers/sev-snp/: CMakeLists.txt  cleanup.c  crypto.c  crypto.h  init.c  main.c  pre_init.c  sev_snp.h  sevapi.h  utils.c  utils.h  verify_evidence.c  x509cert.c  x509cert.h
src/verifiers/sgx-ecdsa/: CMakeLists.txt  cleanup.c  init.c  main.c  verify_evidence.c
src/verifiers/sgx-ecdsa-qve/: CMakeLists.txt  init.c  main.c
src/verifiers/sgx-la/: CMakeLists.txt  cleanup.c  init.c  main.c  sgx_la.h  verify_evidence.c
src/verifiers/tdx-ecdsa/: CMakeLists.txt  cleanup.c  init.c  main.c  tdx-ecdsa.h  tdx_ecdsa.h  verify_evidence.c
